hover over and bug fix collapse accordion

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,3 +93,7 @@ select {
     font-size: 18px;
     fill: gray;
 }
+
+.hover * {
+    fill: yellowGreen !important;
+}
